# weather-bat

./: .gitignore  Cargo.toml  README.md  index.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request-or-other-suggestion.md  feature_request.md
.github/workflows/: rust.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
functions/get-weather/: Cargo.toml  README.md
functions/get-weather/src/: main.rs
src/: codes.rs  main.rs
