[package]
name = "weather-bat-cli"
version = "0.1.0"
authors = ["Tyler Crammond <tylerchc92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
reqwest = { version = "0.11.3", features = ["json","blocking"] }
serde = "1.0.126"
serde_json = "1.0.64"
