[package]
name = "weather-bat"
version = "0.1.0"
authors = ["Tyler Crammond <tylerchc92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"], optional = true }
serde = "1.0.126"
serde_json = "1.0.64"

[features]
default = ["console_error_panic_hook"]
cli = ["tokio"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
